--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".TextViewShowcase" />
-        <activity android:name=".ButtonShowcase"></activity>
+        <activity android:name=".ButtonShowcase" />
+        <activity android:name=".ActivityInformationTransferShowcase" />
+        <activity android:name=".HiddenActivity"></activity>
     </application>
 
 </manifest>
