--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".TextViewShowcase" />
         <activity android:name=".ButtonShowcase" />
         <activity android:name=".ActivityInformationTransferShowcase" />
-        <activity android:name=".HiddenActivity"></activity>
+        <activity android:name=".HiddenActivity" />
+        <activity android:name=".AlertDialogShowcase"></activity>
     </application>
 
 </manifest>
